--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "set ANALYZE=true&&next build"
   },
   "dependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
@@ -17,6 +18,7 @@
     "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^14.0.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
