--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "npm": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.0.1",
