feat: service item and forms

--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@sanity/image-url": "^1.0.2",
     "@sanity/vision": "^3.21.1",
     "@tailwindcss/container-queries": "^0.1.1",
+    "formik": "^2.4.5",
     "next": "13.4.19",
     "next-auth": "^4.24.4",
     "next-sanity": "^7.0.2",
     "npm": "^10.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-is": "^18.2.0",
     "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.21.1",
     "sharp": "^0.32.6",
