--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@sanity/vision": "^3.21.1",
     "@tailwindcss/container-queries": "^0.1.1",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "next": "13.4.19",
     "next-auth": "^4.24.4",
     "next-sanity": "^7.0.2",
