--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.21.1",
     "sharp": "^0.32.6",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "zod": "^3.22.4",
+    "zod-formik-adapter": "^1.2.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
