fix: file upload with contact us

--- a/package.json
+++ b/package.json
@@ -16,12 +16,17 @@
     "@sanity/orderable-document-list": "^1.1.0",
     "@sanity/vision": "^3.21.1",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@types/formidable": "^3.4.5",
+    "@types/mime": "^3.0.4",
+    "formidable": "^3.5.1",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
+    "mime": "^4.0.1",
     "next": "13.4.19",
     "next-auth": "^4.24.4",
     "next-sanity": "^7.0.2",
     "npm": "^10.2.3",
+    "rc-upload": "^4.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-is": "^18.2.0",
