--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rc-upload": "^4.5.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.2",
     "react-is": "^18.2.0",
     "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.21.1",
