--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.2",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-is": "^18.2.0",
     "react-simple-typewriter": "^5.0.1",
     "sanity": "^3.21.1",
