--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/formidable": "^3.4.5",
     "@types/mime": "^3.0.4",
+    "@types/nodemailer": "^6.4.14",
     "formidable": "^3.5.1",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
@@ -25,6 +26,7 @@
     "next": "13.4.19",
     "next-auth": "^4.24.4",
     "next-sanity": "^7.0.2",
+    "nodemailer": "^6.9.8",
     "npm": "^10.2.3",
     "rc-upload": "^4.5.2",
     "react": "^18",
